--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- no action bar application theme. -->
     <style name="AppThemeNoActionBar" parent="AppTheme">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
-
     </style>
 
     <style name="AppThemeFullScreen" parent="AppThemeNoActionBar">
@@ -16,7 +14,6 @@
         <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
     </style>
 
-    <style name="AppThemeSplash" parent="AppThemeFullScreen">
+    <style name="AppThemeSplash" parent="AppThemeFullScreen"/>
 
-    </style>
 </resources>
