--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,2 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <dimen name="nav_header_height">180dp</dimen>
+    <dimen name="nav_header_image_size">80dp</dimen>
+    <dimen name="nav_header_user_name_text_size">18sp</dimen>
+    <dimen name="nav_divider_height">0.5dp</dimen>
+    <dimen name="nav_header_image_vertical_margin">10dp</dimen>
+    <dimen name="nav_header_text_vertical_margin">16dp</dimen>
+    <dimen name="nav_header_text_horizontal_margin">10dp</dimen>
+</resources>
