--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,15 @@
     <dimen name="nav_header_image_vertical_margin">10dp</dimen>
     <dimen name="nav_header_text_vertical_margin">16dp</dimen>
     <dimen name="nav_header_text_horizontal_margin">10dp</dimen>
+    <dimen name="item_estate_marginBottom">5dp</dimen>
+    <dimen name="item_estate_content_padding">10dp</dimen>
+    <dimen name="item_estate_image_size">60dp</dimen>
+    <dimen name="item_estate_image_circular_border_width">0.5dp</dimen>
+    <dimen name="item_estate_text_layout_marginStart">16dp</dimen>
+    <dimen name="item_estate_primary_text_size">18sp</dimen>
+    <dimen name="item_estate_secondary_text_size">14sp</dimen>
+    <dimen name="item_estate_divider_height">0.3dp</dimen>
+    <dimen name="item_estate_divider_marginTop">5dp</dimen>
+    <dimen name="item_estate_text_secondary_text_marginTop">5dp</dimen>
+    <dimen name="no_estates_text_size">16dp</dimen>
 </resources>
