--- a/app/src/main/res/layout/item_estate.xml
+++ b/app/src/main/res/layout/item_estate.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +8,8 @@
     android:background="?attr/selectableItemBackground"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="@dimen/item_estate_content_padding"    android:layoutDirection="rtl">
+    android:padding="@dimen/item_estate_content_padding"
+    android:layoutDirection="rtl">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_board_image"
@@ -15,8 +17,6 @@
         android:layout_height="@dimen/item_estate_image_size"
         android:contentDescription="@string/image_contentDescription"
         android:src="@drawable/estate_item_place_holder"
-        app:civ_border_color="@color/colorPrimaryGray"
-        app:civ_border_width="@dimen/item_estate_image_circular_border_width"
         />
 
     <LinearLayout
@@ -29,7 +29,7 @@
             android:id="@+id/tv_estate_item_primary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorNavy"
             android:textSize="@dimen/item_estate_primary_text_size"
             android:textStyle="bold"
             tools:text="المعلومة الأساسية" />
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/item_estate_text_secondary_text_marginTop"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorNavy"
             android:textSize="@dimen/item_estate_secondary_text_size"
             tools:text="المعلومة الفرعية" />
 
