--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -34,5 +34,5 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/nav_divider_height"
-        android:background="@color/colorPrimaryGray" />
+        android:background="@color/colorGrayDark" />
 </LinearLayout>
