--- a/app/src/main/res/values-v31/styles.xml
+++ b/app/src/main/res/values-v31/styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="AppThemeSplash" parent="AppThemeFullScreen">
-        <item name="android:windowSplashScreenBackground">@color/colorPrimaryCreamy</item>
+        <item name="android:windowSplashScreenBackground">@color/colorCreamy</item>
         <item name="android:windowSplashScreenBrandingImage">@drawable/brand_image</item>
     </style>
 
