--- a/app/src/main/res/layout/activity_add_estate.xml
+++ b/app/src/main/res/layout/activity_add_estate.xml
@@ -617,6 +617,7 @@
             </ScrollView>
 
             <Button
+                android:id="@+id/btn_add_estate_save"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/save_button_text"
