--- a/app/src/main/res/layout/item_estate.xml
+++ b/app/src/main/res/layout/item_estate.xml
@@ -12,7 +12,7 @@
     android:layoutDirection="rtl">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/iv_board_image"
+        android:id="@+id/civ_estate_image"
         android:layout_width="@dimen/item_estate_image_size"
         android:layout_height="@dimen/item_estate_image_size"
         android:contentDescription="@string/image_contentDescription"
