--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -3,20 +3,40 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/add_estate_image_height"
     android:background="?attr/selectableItemBackground"
     android:backgroundTint="@color/colorYellow"
     app:cardCornerRadius="10dp"
     android:outlineSpotShadowColor="@color/colorCreamy"
     android:layout_marginHorizontal="10dp"
+    android:layoutDirection="rtl"
     >
-    <ImageView
-        android:id="@+id/iv_estate_image"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/estate_image_place_holder"
-        android:visibility="visible"
-        android:scaleType="center"
-        />
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/iv_estate_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/estate_image_place_holder"
+            android:visibility="visible"
+            android:scaleType="centerInside"
+            />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_delete_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:contentDescription="@string/fab_add_estate_contentDescription"
+            android:layout_margin="16dp"
+            android:backgroundTint="@color/colorCreamy"
+            app:srcCompat="@drawable/ic_delete"
+            app:tint = "@color/colorRed"
+            app:borderWidth="0dp"
+            app:fabSize="mini"/>
+
+    </FrameLayout>
+
 
 </androidx.cardview.widget.CardView>
